err.txt
    Checking futures-util v0.3.32
    Checking tracing v0.1.44
    Checking rand v0.8.5
    Checking http-body-util v0.1.3
    Checking tokio v1.49.0
    Checking tower-http v0.5.2
    Checking tracing-subscriber v0.3.22
    Checking tungstenite v0.24.0
    Checking futures-executor v0.3.32
    Checking axum-core v0.4.5
    Checking futures v0.3.32
    Checking hyper v1.8.1
    Checking tokio-tungstenite v0.24.0
    Checking tower v0.5.3
    Checking ranvier-core v1.0.0-rc.1 (F:\project\ranvier\ranvier-workspace\ranvier\core)
warning: use of deprecated trait `static_gen::StaticNode`: Legacy trait kept for backward compatibility. Use StaticAxon instead.
  --> core\src\lib.rs:19:71
   |
19 |     StaticAxon, StaticBuildConfig, StaticBuildResult, StaticManifest, StaticNode, StaticStateEntry,
   |                                                                       ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated function `static_gen::read_json_file`: Internal API
  --> core\src\lib.rs:20:5
   |
20 |     read_json_file, write_json_file,
   |     ^^^^^^^^^^^^^^

warning: use of deprecated function `static_gen::write_json_file`: Internal API
  --> core\src\lib.rs:20:21
   |
20 |     read_json_file, write_json_file,
   |                     ^^^^^^^^^^^^^^^

    Checking hyper-util v0.1.20
    Checking axum v0.7.9
warning: `ranvier-core` (lib) generated 3 warnings
    Checking ranvier-inspector v1.0.0-rc.1 (F:\project\ranvier\ranvier-workspace\ranvier\extensions\inspector)
    Checking ranvier-runtime v1.0.0-rc.1 (F:\project\ranvier\ranvier-workspace\ranvier\runtime)
error[E0027]: pattern does not mention field `execution_mode`
   --> runtime\src\axon.rs:187:13
    |
187 |           let Axon {
    |  _____________^
188 | |             mut schematic,
189 | |             executor: prev_executor,
190 | |         } = self;
    | |_________^ missing field `execution_mode`
    |
help: include the missing field in the pattern
    |
189 -             executor: prev_executor,
190 -         } = self;
189 +             executor: prev_executor, execution_mode } = self;
    |
help: if you don't care about this missing field, you can explicitly ignore it
    |
189 -             executor: prev_executor,
190 -         } = self;
189 +             executor: prev_executor, execution_mode: _ } = self;
    |
help: or always ignore missing fields here
    |
189 -             executor: prev_executor,
190 -         } = self;
189 +             executor: prev_executor, .. } = self;
    |

error[E0063]: missing field `execution_mode` in initializer of `Axon<_, _, _, _>`
   --> runtime\src\axon.rs:303:9
    |
303 |         Axon {
    |         ^^^^ missing `execution_mode`

error[E0027]: pattern does not mention field `execution_mode`
   --> runtime\src\axon.rs:326:13
    |
326 |           let Axon {
    |  _____________^
327 | |             mut schematic,
328 | |             executor: prev_executor,
329 | |         } = self;
    | |_________^ missing field `execution_mode`
    |
help: include the missing field in the pattern
    |
328 -             executor: prev_executor,
329 -         } = self;
328 +             executor: prev_executor, execution_mode } = self;
    |
help: if you don't care about this missing field, you can explicitly ignore it
    |
328 -             executor: prev_executor,
329 -         } = self;
328 +             executor: prev_executor, execution_mode: _ } = self;
    |
help: or always ignore missing fields here
    |
328 -             executor: prev_executor,
329 -         } = self;
328 +             executor: prev_executor, .. } = self;
    |

error[E0063]: missing field `execution_mode` in initializer of `Axon<_, _, _, _>`
   --> runtime\src\axon.rs:475:9
    |
475 |         Axon {
    |         ^^^^ missing `execution_mode`

Some errors have detailed explanations: E0027, E0063.
For more information about an error, try `rustc --explain E0027`.
error: could not compile `ranvier-runtime` (lib) due to 4 previous errors
